students form TestFix

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -30,19 +30,54 @@
   <div class="field">
     <%= f.label t :birth %><br />
     <%= f.date_select :birth %>
-    <input class="datepicker" id="birth-dp"></input>
+    <input class="datepicker" id="dp-birth"></input>
   </div>
   <div class="field">
     <%= f.label t :admitted %><br />
     <%= f.date_select :admitted %>
-    <input class="datepicker"></input>
+    <input class="datepicker" id="dp-admitted"></input>
   </div>
   <div class="field">
     <%= f.label t :graduated %><br />
     <%= f.date_select :graduated %>
-    <input class="datepicker"></input>
+    <input class="datepicker" id="dp-graduated"></input>
   </div>
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
+<script>
+$(document).ready(function() {
+  
+  function ChangeBirth(e)
+  {
+    var date = $("#dp-birth").data("kendoDatePicker").value();
+    $("#student_birth_1i").val(date.getFullYear());
+    $("#student_birth_2i").val(date.getMonth()+1);
+    $("#student_birth_3i").val(date.getDate());
+  }
+  
+  function ChangeAdmitted(e)
+  {
+    var date = $("#dp-admitted").data("kendoDatePicker").value();
+    $("#student_admitted_1i").val(date.getFullYear());
+    $("#student_admitted_2i").val(date.getMonth()+1);
+    $("#student_admitted_3i").val(date.getDate());
+  }
+  
+  function ChangeGraduated(e)
+  {
+    var date = $("#dp-graduated").data("kendoDatePicker").value();
+    $("#student_graduated_1i").val(date.getFullYear());
+    $("#student_graduated_2i").val(date.getMonth()+1);
+    $("#student_graduated_3i").val(date.getDate());
+  }
+  
+  $(".datepicker").kendoDatePicker();
+  $("#dp-birth").data("kendoDatePicker").bind("change", ChangeBirth);
+  $("#dp-admitted").data("kendoDatePicker").bind("change", ChangeAdmitted);
+  $("#dp-graduated").data("kendoDatePicker").bind("change", ChangeGraduated);
+
+});
+</script>
