login button fix

--- a/app/views/shared/_menubar.html.erb
+++ b/app/views/shared/_menubar.html.erb
@@ -1,7 +1,7 @@
 <div id="menubar">
   <% if user_signed_in? %>
     <%= current_user.email %>
-    <%= link_to t("devise.sign_out"), destroy_user_session_path, :method => :delete %>
+    <%= link_to t("devise.sign_out"), destroy_user_session_path, :class => "k-button", :method => :delete %>
     <%= render :partial => "shared/menubar_menu" %>
   <% end %>
 </div>
