少しだけ調整

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -16,11 +16,11 @@ pre {
   font-size: 11px; }
 
 a {
-  color: #000;
+  color: #007bbb;
   &:visited {
-    color: #fff; }
+    color: #007bbb; }
   &:hover {
-    color: #fff; } }
+    color: #0095d9; } }
 
 div {
   &.field, &.actions {
