--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,5 +12,5 @@
  *  require elegant-brit-kendo-theme.css
  *  require jquery.wijmo-complete.2.0.0.css
  * = require themes/rocket/jquery-wijmo.css
- * = require jquery.wijmo-complete.all.2.0.0.min.css
+ *  require jquery.wijmo-complete.all.2.0.0.min.css
 */
