--- a/app/views/shared/_menubar_menu.html.erb
+++ b/app/views/shared/_menubar_menu.html.erb
@@ -3,18 +3,22 @@
 
   <li><%= link_to t("students.list"), students_path %></li>
 
-  <li><%= t "class_group_management" %>
-  <ul>
-    <li><%= link_to t("class_groups.list"), class_groups_path %></li>
-  </ul>
+  <li>
+    <a><%= t "class_group_management" %></a>
+    <ul>
+      <li><%= link_to t("class_groups.list"), class_groups_path %></li>
+    </ul>
+  </li>
   
-  <li><%= t "course_management" %>
-  <ul>
-    <li><%= link_to t("syllabuses.list"), syllabuses_path %></li>
-    <li><%= link_to t("courses.list"), courses_path %></li>
-  </ul>
+  <li>
+    <a><%= t "course_management" %></a>
+    <ul>
+      <li><%= link_to t("syllabuses.list"), syllabuses_path %></li>
+      <li><%= link_to t("courses.list"), courses_path %></li>
+    </ul>
+  </li>
 </ul>
 
 <script>
-  $("#menubarMenu").kendoMenu();
+  $("#menubarMenu").wijmenu();
 </script>
