--- a/app/views/shared/_menubar.html.erb
+++ b/app/views/shared/_menubar.html.erb
@@ -1,11 +1,5 @@
 <div id="menubar">
-  <% if user_signed_in? %>
-    <%= current_user.email %>
-    <%= link_to t("devise.sign_out"), destroy_user_session_path, :class => "wijmo-button", :method => :delete, :id => "logout_button" %>
-    <script>
-      $("#logout_button").button();
-    </script>  
-    <%= render :partial => "shared/menubar_menu" %>
-  <% end %>
+  <%= render :partial => "shared/login_widget" %>
+  <%= render :partial => "shared/global_menu" %>
 </div>
 
