adjusting/fixing, temporary push

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -11,7 +11,7 @@
 
 <div id="tabStrip">
   <ul>
-    <li class="k-state-acive"><%= t "course_enrollments.list" %></li>
+    <li class="k-state-active"><%= t "course_enrollments.list" %></li>
     <li><%= t "assignments.list" %></li>
     <li><%= t "exams.list" %></li>
   </ul>
