--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,6 +3,7 @@
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
+ *= require gakuengine.css.scss
  *= require scaffolds.css.scss
  *= require jquery.wijmo-open.2.0.0.css
  *= require themes/gakuengine/gakuengine-rocket.css.scss
