Student Grid Fixed

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,14 +1,15 @@
 <h1><%= t "students.list" %></h1>
 <%= link_to t('students.new'), new_student_path, :class => "k-button" %>
 
-
-
 <div id="grid"></div>
-
 
 <script>
 $(document).ready(function() {
-    
+  
+  var wh = $(window).height();
+  var gp = $('#grid').position();
+  var g_num = Math.round((wh - gp.top) / 36) - 2;
+
   function SetGrid(DataSource)
   {
     var DateW = 95;
@@ -18,9 +19,9 @@ $(document).ready(function() {
       dataSource:
       {
         data: DataSource,
-        pageSize: 20
+        pageSize: g_num
       },
-      height: 720,
+      height: (g_num + 1) * 36,
       groupable: false,
       scrollable: false,
       sortable: true,
@@ -70,7 +71,7 @@ $(document).ready(function() {
       ]
     });
   }
-
+  
   $.getJSON("/students.json",function(ds)
   {
     for(var i = 0; i < ds.length; i++)
@@ -80,8 +81,6 @@ $(document).ready(function() {
     }
     SetGrid(ds);
   });
-  
-
 });
 </script>
 
