--- a/app/assets/stylesheets/gakuengine.css.scss
+++ b/app/assets/stylesheets/gakuengine.css.scss
@@ -11,3 +11,17 @@ body {
   margin: 0;
   padding: 5px;
 }
+
+.notice {
+  border: 2px;
+  background: {
+    color: #00a3af;
+  }
+
+  font: {
+    size: 20px;
+  }
+
+  color: black;
+  padding: 10px;
+}
