--- a/app/views/shared/_menubar.html.erb
+++ b/app/views/shared/_menubar.html.erb
@@ -1,5 +1,7 @@
 <div id="menubar">
-  <%= render :partial => "shared/login_widget" %>
-  <%= render :partial => "shared/global_menu" %>
+  <% if user_signed_in? %>
+    <%= render :partial => "shared/login_widget" %>
+    <%= render :partial => "shared/global_menu" %>
+  <% end %>
 </div>
 
