--- a/app/views/mockups/_course_exam_list.html.erb
+++ b/app/views/mockups/_course_exam_list.html.erb
@@ -1,25 +1,70 @@
-<table class="make-grid">
+<table id="exams-grid" class="make-grid">
   <tr>
     <th data-field="<%= t 'exams.name' %>"><%= t 'exams.name' %></th>
     <th data-field="<%= t :execution_date %>"><%= t :execution_date %></th>
-    <th data-field="<%= t :grading %>"><%= t :grading %></th>
+    <th data-field="<%= t 'grades.grading' %>"><%= t 'grades.grading' %></th>
+    <th data-field="<%= t 'grades.average_score' %>"><%= t 'grades.average_score' %></th>
+    <th data-field="<%= t 'grades.weighting_portion' %>"><%= t 'grades.weighting_portion' %></th>
+    <th data-field="<%= t 'grades.max_points' %>"><%= t 'grades.max_points' %></th>
     <th data-field="<%= t :options %>"><%= t :options %></th>
   </tr>
 
 
   <tr>
     <td><%= link_to "1章から6章レビュー", "", :class => "make-button" %></td>
-    <td><%= text_field_tag "exam_date1", "" %></td>
-    <script>
-      $("#exam_date1").kendoDatePicker({value: new Date(2012, 2, 22)});
-    </script>
-    <td>[済]<%= link_to t(:grading), "", :class => "make-button" %></td>
-    <td><%= link_to "ノート追加", "", :class => "make-button" %></td>
+    <td><input id="exam_date1" /></td>
+    <td>[12/12件済]<%= link_to t('grades.grading'), "", :class => "make-button" %></td>
+    <td><div id="exam_result1"><div style="float:right; margin-right: 15px; margin-top: 5px;">76.5</div></div>
+    </td>
+    <td>
+      <input id="exam_weighting_type1" />
+      <input id="exam_weighting1" type="textbox" value="0.1" />
+    </td>
+    <td>
+      100点<%= link_to "変更", "", :class => "make-button" %>
+    </td>
+    <td>
+      <%= link_to "ノート追加", "", :class => "make-button" %>
+      <%= link_to "編集", "", :class => "make-button" %>
+    </td>
   </tr>
   <tr>
-    <td><%= link_to t("exams.new"), "", :class => "make-button" %></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><%= link_to "6章から10章レビュー", "", :class => "make-button" %></td>
+    <td><input id="exam_date2" /></td>
+    <td>[0/12件済]<%= link_to t('grades.grading'), "", :class => "make-button" %></td>
+    <td><div id="exam_result2"></div>
+    </td>
+    <td>
+      <input id="exam_weighting_type2" />
+      <input id="exam_weighting2" type="textbox" value="0.3" />
+    </td>
+    <td>
+      150点<%= link_to "変更", "", :class => "make-button" %>
+    </td>
+    <td>
+      <%= link_to "ノート追加", "", :class => "make-button" %>
+      <%= link_to "編集", "", :class => "make-button" %>
+    </td>
   </tr>
 </table>
+</table>
+<script>
+    $("#exams-grid").bind("grid_ready", function(){
+      $("#exam_date1").kendoDatePicker({value: new Date(2012, 2, 23), format: 'yyyy年MM月dd日' });
+      $("#exam_result1").progressbar({value: 76.5});
+      $("#exam_weighting1").kendoNumericTextBox({
+        format: "p0",
+        min: 0,
+        max: 1,
+        step: 0.01
+      });
+      $("#exam_weighting_type1").kendoDropDownList([
+        { text: "なし", value: "none" },
+        { text: "倍数", value: "miltiplier"},
+        { text: "試験内", value: "exams"},
+        { text: "授業全体", value: "course"}
+      ]);
+
+      $("#exam_date2").kendoDatePicker({value: new Date(2012, 4, 12), format: 'yyyy年MM月dd日' });
+    });
+</script>
