--- a/app/views/mockups/_course_exam_list.html.erb
+++ b/app/views/mockups/_course_exam_list.html.erb
@@ -11,14 +11,17 @@
 
 
   <tr>
-    <td><%= link_to "1章から6章レビュー", "", :class => "make-button" %></td>
+    <td><%= link_to "1章から6章レビュー", '',
+       :class => "make-button" %>
     <td><input id="exam_date1" /></td>
-    <td>[12/12件済]<%= link_to t('grades.grading'), "", :class => "make-button" %></td>
+    <td>[12/12件済]<%= link_to t('grades.grading'), 
+      {:controller => :exams, :action => :edit, :course_id => @course.id, :exam_id => "1"},
+      :id => "grade_exam", :class => "make-button" %></td>
     <td><div id="exam_result1"><div style="float:right; margin-right: 15px; margin-top: 5px;">76.5</div></div>
     </td>
     <td>
-      <input id="exam_weighting_type1" />
-      <input id="exam_weighting1" type="textbox" value="0.1" />
+      <input id="exam1" class="exam_weighting_type" />
+      <input id="exam1" class="exam_weighting" type="textbox" value="0.1" />
     </td>
     <td>
       100点<%= link_to "変更", "", :class => "make-button" %>
@@ -31,12 +34,13 @@
   <tr>
     <td><%= link_to "6章から10章レビュー", "", :class => "make-button" %></td>
     <td><input id="exam_date2" /></td>
-    <td>[0/12件済]<%= link_to t('grades.grading'), "", :class => "make-button" %></td>
-    <td><div id="exam_result2"></div>
+    <td>[12/12件済]<%= link_to t('grades.grading'), "", :class => "make-button" %></td>
+    <td>
+      <div id="exam_result2"><div style="float:right; margin-right: 15px; margin-top: 5px;">83</div></div>
     </td>
     <td>
-      <input id="exam_weighting_type2" />
-      <input id="exam_weighting2" type="textbox" value="0.3" />
+      <input id="exam2" class="exam_weighting_type" />
+      <input id="exam2" class="exam_weighting" type="textbox" value="0.3" />
     </td>
     <td>
       150点<%= link_to "変更", "", :class => "make-button" %>
@@ -46,25 +50,46 @@
       <%= link_to "編集", "", :class => "make-button" %>
     </td>
   </tr>
+  <tr>
+    <td><%= link_to "中間テスト", "", :class => "make-button" %></td>
+    <td><input id="exam_date3" /></td>
+    <td>[0/12件済]<%= link_to t('grades.grading'), "", :class => "make-button" %></td>
+    <td><div id="exam_result3"><div style="float:right; margin-right: 15px; margin-top: 5px;">未採点</div></div>
+    </td>
+    <td>
+      <input id="exam3" class="exam_weighting_type" />
+      <input id="exam3" class="exam_weighting" type="textbox" value="0.25" />
+    </td>
+    <td>
+      100点<%= link_to "変更", "", :class => "make-button" %>
+    </td>
+    <td>
+      <%= link_to "ノート追加", "", :class => "make-button" %>
+      <%= link_to "編集", "", :class => "make-button" %>
+    </td>
+  </tr>
 </table>
 </table>
 <script>
-    $("#exams-grid").bind("grid_ready", function(){
-      $("#exam_date1").kendoDatePicker({value: new Date(2012, 2, 23), format: 'yyyy年MM月dd日' });
-      $("#exam_result1").progressbar({value: 76.5});
-      $("#exam_weighting1").kendoNumericTextBox({
-        format: "p0",
-        min: 0,
-        max: 1,
-        step: 0.01
-      });
-      $("#exam_weighting_type1").kendoDropDownList([
-        { text: "なし", value: "none" },
-        { text: "倍数", value: "miltiplier"},
-        { text: "試験内", value: "exams"},
-        { text: "授業全体", value: "course"}
-      ]);
-
-      $("#exam_date2").kendoDatePicker({value: new Date(2012, 4, 12), format: 'yyyy年MM月dd日' });
+    $(".exam_weighting_type").kendoDropDownList([
+      { text: "なし", value: "none" },
+      { text: "倍数", value: "miltiplier"},
+      { text: "試験内", value: "exams"},
+      { text: "授業全体", value: "course"}
+    ]);
+  $("#exams-grid").bind("grid_ready", function(){
+    $("#exam_date1").kendoDatePicker({value: new Date(2012, 2, 23), format: 'yyyy年MM月dd日' });
+    $("#exam_result1").progressbar({value: 76.5});
+    $(".exam_weighting").kendoNumericTextBox({
+      format: "p0",
+      min: 0,
+      max: 1,
+      step: 0.01
     });
+
+    $("#exam_date2").kendoDatePicker({value: new Date(2012, 3, 2), format: 'yyyy年MM月dd日' });
+    $("#exam_result2").progressbar({value: 83});
+
+    $("#exam_date3").kendoDatePicker({format: 'yyyy年MM月dd日' });
+  });
 </script>
