--- a/app/views/mockups/_grade_exam.html.erb
+++ b/app/views/mockups/_grade_exam.html.erb
@@ -7,7 +7,17 @@
   </tr>
   <tr>
     <td>A子</td>
+    <td><div class="make-grading-widget">85</div></td>
+    <td><%= link_to "ノート追加", "", :class => "make-button" %></td>
+  </tr>
+  <tr>
+    <td>B子</td>
     <td><div class="make-grading-widget">65</div></td>
+    <td><%= link_to "ノート追加", "", :class => "make-button" %></td>
+  </tr>
+  <tr>
+    <td>A子</td>
+    <td><div class="make-grading-widget">95</div></td>
     <td><%= link_to "ノート追加", "", :class => "make-button" %></td>
   </tr>
 </table>
