--- a/app/assets/stylesheets/buhin.css.scss
+++ b/app/assets/stylesheets/buhin.css.scss
@@ -1,20 +1,24 @@
 .buhin-grid {
   width: 100%;
+  height: 100%;
   table {
-    border: 2px solid black;
+    border: none;
     border-collapse: collapse;
     vertical-align: middle;
   }
-
+  
   tr, th, td {
+    vertical-align: center;
     border-collapse: collapse;
     border-style: none;
     border-spacing: 0px;
     border-width: 0px;
-    margin-bottom: 2px;
+    margin: {
+      bottom: 10%;
+    }
   }
 
-  tr:nth-child(even) {
+  tr:nth-child(odd) td{
     background: #999999;
   }
 }
