--- a/app/assets/stylesheets/gakuengine.css.scss
+++ b/app/assets/stylesheets/gakuengine.css.scss
@@ -8,9 +8,9 @@ html {
 }
 
 body {
-  border: 0;
-  margin: 0;
-  padding: 5px;
+  border: 0px;
+  margin: 0px;
+  padding-top: 60px;
 }
 
 .notice {
@@ -25,4 +25,14 @@ body {
 
   color: black;
   padding: 10px;
+}
+
+/*bootstrap fix*/
+.navbar .brand
+{
+  padding: 6px 20px 7px;
+}
+
+.navbar .nav > li > a {
+  padding: 11px 10px 9px;
 }
