--- a/app/views/shared/_login_widget.html.erb
+++ b/app/views/shared/_login_widget.html.erb
@@ -3,10 +3,10 @@
   <li class="active">
   <% if user_signed_in? %>
     <div class="btn-group">
-      <a class="btn btn-mini btn-success" href="#">
+      <a class="btn btn-success" href="#">
         <i class="icon-user icon-white"></i>　<%= current_user.email %>
       </a>  
-      <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
+      <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
         <span class="caret"></span>
       </a>    
       <ul class="dropdown-menu">
