--- a/app/views/shared/_global_menu.html.erb
+++ b/app/views/shared/_global_menu.html.erb
@@ -16,4 +16,11 @@
       <li><%= link_to t("courses.list"), courses_path %></li>
     </ul>
   </li>
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= t "exam_management" %> <b class="caret"></b></a>
+    <ul class="dropdown-menu">
+      <li><%= link_to t("exams.list"), exams_path %></li>
+    </ul>
+  </li>
+  
 </ul>
