--- a/app/assets/stylesheets/gakuengine.css.scss
+++ b/app/assets/stylesheets/gakuengine.css.scss
@@ -8,6 +8,8 @@ html {
 }
 
 body {
+  line-height: 1.60;
+  letter-spacing: 0px;
   border: 0px;
   margin: 0px;
   padding-top: 60px;
@@ -28,6 +30,31 @@ body {
 }
 
 /*bootstrap fix*/
+hr{
+  margin: 10px 0px;
+}
+.btn-toolbar {
+  margin: 0px;
+  height: 28px;
+  .last{
+    margin-right: 15px;
+  }
+}
+.btn-group + .btn-group {
+  margin-left: 0px;
+}
+.btn.active, .btn:active {
+  background-color: lightGoldenrodYellow;
+}
+.row{
+  margin: 0px 0px 0px
+}
+.row-fluid{
+  margin: 0px 0px 0px
+}
+[class*="span"] {
+  margin-left: 0px;
+}
 .navbar .brand
 {
   padding: 7px 20px 7px;
@@ -39,4 +66,33 @@ body {
 
 .navbar .btn-group{
   padding: 6px 0px 6px 10px;
+}
+
+.table{
+  margin-bottom: 0px;
+}
+.table .th-center{
+  color: white;
+  background-color: #98acd4;
+  text-align: center;
+  vertical-align: middle;
+  th{
+    text-align: center;
+    vertical-align: middle;
+  }
+}
+.table tbody{
+  td{
+    text-align: right;
+    vertical-align: middle;
+  }
+  .td-left{
+    text-align: left;
+  }
+}
+.table-striped tbody tr:nth-child(odd) td, .table-striped tbody tr:nth-child(odd) th {
+  background-color: white;
+}
+.table tbody tr:hover td, .table tbody tr:hover th {
+  background-color: #e2f3e7;
 }
