--- a/app/views/courses/_exams.html.erb
+++ b/app/views/courses/_exams.html.erb
@@ -1,3 +1,3 @@
 <div id="course_exams">
-  <%= render :partial => "mockups/course_exam_list" %> 
+  <%= render :partial => "mockups/exam_composite" %> 
 </div>
