--- a/app/views/shared/_login_widget.html.erb
+++ b/app/views/shared/_login_widget.html.erb
@@ -1,15 +1,15 @@
 <ui class="nav pull-right">
   <% if user_signed_in? %>
-  <li class="divider-vertical"></li>
-  <li>
-    <div class="btn-group">
-      <a class="btn btn-success dropdown-toggle" data-toggle="dropdown" href="#">
-        <i class="icon-user icon-white"></i>　<%= current_user.email %> <span class="caret"></span>
-      </a>
-      <ul class="dropdown-menu">
-        <li><a href="<%= destroy_user_session_path %>"><i class="icon-ban-circle"></i> <%= t("devise.sign_out") %></a></li>
-      </ul>
-    </div>
-  </li>
+    <li class="divider-vertical"></li>
+    <li>
+      <div class="btn-group">
+        <a class="btn btn-success dropdown-toggle" data-toggle="dropdown" href="#">
+          <i class="icon-user icon-white"></i>　<%= current_user.email %> <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+          <li><%= link_to t("devise.sign_out"), destroy_user_session_path, :method => :delete %></li>
+        </ul>
+      </div>
+    </li>
   <% end %>
 </ul>
