[spec/requests] Add test for creating new student

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,5 @@
 <h1><%= t "students.list" %></h1>
-<%= link_to t('students.new'), new_student_path, :class => "k-button" %>
+<%= link_to t('students.new'), new_student_path, :class => "k-button", :id => "new_student_link" %>
 
 <div id="grid"></div>
 
