言語設定画面を追加

--- a/app/assets/stylesheets/gakuengine.css.scss
+++ b/app/assets/stylesheets/gakuengine.css.scss
@@ -15,6 +15,19 @@ body {
   padding-top: 60px;
 }
 
+@media (max-width: 768px) {
+  /* Remove any padding from the body */
+  body {
+    padding-top: 0;
+  }
+}
+@media (min-width: 768px) and (max-width: 980px) {
+  /* Remove any padding from the body */
+  body {
+    padding-top: 0;
+  }
+}
+
 .notice {
   border: 2px;
   background: {
