--- a/app/views/shared/_language_bar.html.erb
+++ b/app/views/shared/_language_bar.html.erb
@@ -3,7 +3,7 @@
   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= t "language" %> <b class="caret"></b></a>
   <ul class="dropdown-menu">
     <li><%= link_to "English", :locale => 'en' %></li>
-    <li><%= link_to "Japanese", :locale => 'jp' %></li>
+    <li><%= link_to "Japanese", :locale => 'ja' %></li>
   </ul>
 </li>
 </ul>
