--- a/app/views/shared/_login_widget.html.erb
+++ b/app/views/shared/_login_widget.html.erb
@@ -7,9 +7,16 @@
         <i class="icon-user icon-white"></i>　<%= current_user.email %> <span class="caret"></span>
       </a>
       <ul class="dropdown-menu">
-        <li><a href="<%= destroy_user_session_path %>"><i class="icon-ban-circle"></i> <%= t("devise.sign_out") %></a></li>
+        <li><a href="<%= destroy_user_session_path %>"><i class="icon-ban-circle"></i> <%= t "devise.sign_out" %></a></li>
+        <li id="options"><a href="#modal-options"><i class="icon-certificate"></i> <%= t "config.label" %></a></li>
       </ul>
     </div>
   </li>
   <% end %>
 </ul>
+<script type="text/javascript" charset="utf-8">
+  $('#options').click(function(e){
+    console.log("aaaaaaa");
+    $('#modal-options').modal('show')
+  });
+</script>
