--- a/app/views/shared/_modal_config.html.erb
+++ b/app/views/shared/_modal_config.html.erb
@@ -1,4 +1,4 @@
-<div class="modal hide" id="modal-options">
+<div class="modal hide fade" id="modal-options">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal">×</button>
     <h3><%= t "config.label" %></h3>
