fix student new

--- a/app/assets/stylesheets/gakuengine.css.scss
+++ b/app/assets/stylesheets/gakuengine.css.scss
@@ -59,15 +59,15 @@ hr{
 .btn.active, .btn:active {
   background-color: lightGoldenrodYellow;
 }
-.row{
-  margin: 0px 0px 0px
-}
-.row-fluid{
-  margin: 0px 0px 0px
-}
-[class*="span"] {
-  margin-left: 0px;
-}
+// .row{
+  // margin: 0px 0px 0px
+// }
+// .row-fluid{
+  // margin: 0px 0px 0px
+// }
+// [class*="span"] {
+  // margin-left: 0px;
+// }
 .navbar .brand
 {
   padding: 7px 20px 7px;
