--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -13,7 +13,7 @@
   <fieldset class="well">
     <div class="row-fluid">
       <div class="span6 control-group">
-        <%= f.label :class_groups, "クラス", :class => "control-label" %>
+        <%= f.label :class_groups, t("class"), :class => "control-label" %>
         <div class="controls">
           <%= f.select :class_groups, [["ClassA", "class_a"], ["ClassB", "class_b"]], {:prompt => "選択してください"}, {:class => "span12"} %>
         </div>
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="span6 control-group">
-        <%= f.label :name, t("name")+" ("+t("phonetic")+")", :class => "control-label" %>
+        <%= f.label :name, t("name")+" ("+t("phonetic_reading")+")", :class => "control-label" %>
         <div class="controls">
           <%= f.text_field :name, :class => "span12" %>
         </div>
@@ -257,14 +257,14 @@
           </div>
           <hr />
           <div class="row-fluid">
-            <button class="span12 btn btn-primary"><%= t "guardian.plus" %></button>
+            <button class="span12 btn btn-primary"><%= t "guardian.add" %></button>
           </div>
         </div>
         <div class="tab-pane" id="note">
           <div class="tabbable">
             <ul class="nav nav-tabs">
-              <li class="active"><a href="#note1" data-toggle="tab"><%= t "note.note" %>1</a></li>
-              <li class=""><a href="#note2" data-toggle="tab"><%= t "note.note" %>2</a></li>
+              <li class="active"><a href="#note1" data-toggle="tab"><%= t "note.notes" %>1</a></li>
+              <li class=""><a href="#note2" data-toggle="tab"><%= t "note.notes" %>2</a></li>
             </ul>
             <div class="tab-content">
               <div class="tab-pane active" id="note1">
@@ -307,7 +307,7 @@
           </div>
           <hr />
           <div class="row-fluid">
-            <button class="span12 btn btn-primary"><%= t "note.plus" %></button>
+            <button class="span12 btn btn-primary"><%= t "note.add" %></button>
           </div>
         </div>
       </div>
