--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -20,16 +20,28 @@
       </div>
     </div>
     <div class="row-fluid">
-      <div class="span6 control-group">
-        <%= f.label :name, t("name"), :class => "control-label" %>
+      <div class="span3 control-group">
+        <%= f.label :name, t("name")+" ("+t("surname")+")", :class => "control-label" %>
         <div class="controls">
-          <%= f.text_field :name, :class => "span12" %>
+          <%= text_field_tag :surname, nil, :class => "span12" %>
         </div>
       </div>
-      <div class="span6 control-group">
-        <%= f.label :name, t("name")+" ("+t("phonetic_reading")+")", :class => "control-label" %>
+      <div class="span3 control-group">
+        <%= f.label :name, t("name")+" ("+t("given_name")+")", :class => "control-label" %>
         <div class="controls">
-          <%= f.text_field :name, :class => "span12" %>
+          <%= text_field_tag :given_name, nil, :class => "span12" %>
+        </div>
+      </div>
+      <div class="span3 control-group">
+        <%= f.label :name, t("phonetic_reading")+" ("+t("surname")+")", :class => "control-label" %>
+        <div class="controls">
+          <%= text_field_tag :surname, nil, :class => "span12" %>
+        </div>
+      </div>
+      <div class="span3 control-group">
+        <%= f.label :name, t("phonetic_reading")+" ("+t("given_name")+")", :class => "control-label" %>
+        <div class="controls">
+          <%= text_field_tag :given_name, nil, :class => "span12" %>
         </div>
       </div>
     </div>
@@ -53,7 +65,7 @@
       <ul class="nav nav-tabs">
         <li class="active"><a href="#profile" data-toggle="tab"><%= t "profile" %></a></li>
         <li class=""><a href="#guardian" data-toggle="tab"><%= t "guardian.guardian" %></a></li>
-        <li class=""><a href="#note" data-toggle="tab"><%= t "note.note" %></a></li>
+        <li class=""><a href="#note" data-toggle="tab"><%= t "note.notes" %></a></li>
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="profile">
@@ -119,16 +131,28 @@
             <div class="tab-content">
               <div class="tab-pane active" id="guardian1">
                 <div class="row-fluid">
-                  <div class="span6 control-group">
-                    <%= f.label :name, t("name"), :class => "control-label" %>
+                  <div class="span3 control-group">
+                    <%= f.label :name, t("name")+" ("+t("surname")+")", :class => "control-label" %>
                     <div class="controls">
-                      <%= f.text_field :name, :class => "span12" %>
+                      <%= text_field_tag :surname, nil, :class => "span12" %>
                     </div>
                   </div>
-                  <div class="span6 control-group">
-                    <%= f.label :name, t("name")+" ("+t("phonetic")+")", :class => "control-label" %>
+                  <div class="span3 control-group">
+                    <%= f.label :name, t("name")+" ("+t("given_name")+")", :class => "control-label" %>
                     <div class="controls">
-                      <%= f.text_field :name, :class => "span12" %>
+                      <%= text_field_tag :given_name, nil, :class => "span12" %>
+                    </div>
+                  </div>
+                  <div class="span3 control-group">
+                    <%= f.label :name, t("phonetic_reading")+" ("+t("surname")+")", :class => "control-label" %>
+                    <div class="controls">
+                      <%= text_field_tag :surname, nil, :class => "span12" %>
+                    </div>
+                  </div>
+                  <div class="span3 control-group">
+                    <%= f.label :name, t("phonetic_reading")+" ("+t("given_name")+")", :class => "control-label" %>
+                    <div class="controls">
+                      <%= text_field_tag :given_name, nil, :class => "span12" %>
                     </div>
                   </div>
                 </div>
@@ -187,16 +211,28 @@
               </div>
               <div class="tab-pane" id="guardian2">
                 <div class="row-fluid">
-                  <div class="span6 control-group">
-                    <%= f.label :name, t("name"), :class => "control-label" %>
+                  <div class="span3 control-group">
+                    <%= f.label :name, t("name")+" ("+t("surname")+")", :class => "control-label" %>
                     <div class="controls">
-                      <%= f.text_field :name, :class => "span12" %>
+                      <%= text_field_tag :surname, nil, :class => "span12" %>
                     </div>
                   </div>
-                  <div class="span6 control-group">
-                    <%= f.label :name, t("name")+" ("+t("phonetic")+")", :class => "control-label" %>
+                  <div class="span3 control-group">
+                    <%= f.label :name, t("name")+" ("+t("given_name")+")", :class => "control-label" %>
                     <div class="controls">
-                      <%= f.text_field :name, :class => "span12" %>
+                      <%= text_field_tag :given_name, nil, :class => "span12" %>
+                    </div>
+                  </div>
+                  <div class="span3 control-group">
+                    <%= f.label :name, t("phonetic_reading")+" ("+t("surname")+")", :class => "control-label" %>
+                    <div class="controls">
+                      <%= text_field_tag :surname, nil, :class => "span12" %>
+                    </div>
+                  </div>
+                  <div class="span3 control-group">
+                    <%= f.label :name, t("phonetic_reading")+" ("+t("given_name")+")", :class => "control-label" %>
+                    <div class="controls">
+                      <%= text_field_tag :given_name, nil, :class => "span12" %>
                     </div>
                   </div>
                 </div>
