[refactor/view] create exam from exam index with ajax and spec

--- a/app/views/exams/index.html.slim
+++ b/app/views/exams/index.html.slim
@@ -16,4 +16,4 @@
 		    	th class='btn-inverse' Use weighting
 		    	th class='btn-info' Options
 			tbody
-				=render :partial => 'exams/exams',  :as => :exam, :collection => @exams
+				=render :partial => 'exams/exam',  :as => :exam, :collection => @exams
