--- a/app/views/shared/_global_menu.html.slim
+++ b/app/views/shared/_global_menu.html.slim
@@ -1,7 +1,9 @@
 ul.nav#menu
   li
     = link_to t("students.list"), students_path
-  li.dropdown
+  li
+    = link_to t("class_groups.list"), class_groups_path
+  /li.dropdown
     a.dropdown-toggle data-toggle="dropdown" href="#"
       = t("class_group_management")
       b.caret
@@ -21,6 +23,12 @@ ul.nav#menu
       b.caret
     ul.dropdown-menu
       li= link_to t("exams.plural"), exams_path
+  li.dropdown
+    a.dropdown-toggle data-toggle="dropdown" href="#"
+      = t("admissions.manage_admissions")
+      b.caret
+    ul.dropdown-menu
+      li= link_to t("admissions.candidates.list"), admissions_path
   li.dropdown
     a.dropdown-toggle data-toggle="dropdown" href="#"
       = t("admin.admin")
