--- a/app/views/students/_students.html.slim
+++ b/app/views/students/_students.html.slim
@@ -10,9 +10,9 @@ table#students-index.index.table.table-striped.table-bordered.table-condensed
       th.btn-inverse = student_sortable "seat_number", t('class_group_enrollments.seat_number')
       th.btn-inverse = student_sortable "admitted", t('students.admitted')
       th.btn-inverse = student_sortable "primary_address", t('addresses.primary')
-      - if params[:controller] == "students"
+      - if params[:controller] == "students" or params[:controller] == "admissions"
         th.btn-info style="width:94px" = t("manage")
-      
+
   tbody
     =render :partial => 'students/student', :collection => @students, :as => 'student'
 
