--- a/app/views/students/search/_student.html.slim
+++ b/app/views/students/search/_student.html.slim
@@ -9,3 +9,7 @@
   = f.text_field :birth_date_gteq, :class => 'span12', :placeholder => t('date_placeholder')
   = f.label :birth_date_lteq, t("students.birth_and")
   = f.text_field :birth_date_lteq, :style => "margin-bottom:0px", :class => 'span12', :placeholder => t('date_placeholder')
+- if params[:controller] == "admissions"
+  .span3
+    = f.label :school_id, t("admissions.candidates.junior_high_school")
+    = select_tag :name, nil, :class => "span12"
