--- a/app/views/students/_students.html.slim
+++ b/app/views/students/_students.html.slim
@@ -1,7 +1,8 @@
 table#students-index.index.table.table-striped.table-bordered.table-condensed
   thead
     tr
-      th
+      th.btn-inverse style="width:30px"
+        i.icon-check.icon-white
       th.btn-inverse = sort_link @search, "surname", t("surname")
       th.btn-inverse = sort_link @search, "name", t("name")
       th.btn-inverse = student_sortable "birth_date", t('birth')
