--- a/app/views/class_groups/show.html.slim
+++ b/app/views/class_groups/show.html.slim
@@ -61,5 +61,5 @@
           
     .row-fluid
       .span12.well
-        = link_to t("Edit"), edit_class_group_path(@class_group), :class => "span6 btn", :remote => true
-        = link_to t("Back"), class_groups_path, :class => "span6 btn"
+        = link_to_edit_with_text [:edit, @class_group], :class => "span6 btn edit-link", :remote => true
+        = link_to_back class_groups_path, :class => "span6 btn", :id => 'back-class-group-link'
