--- a/app/views/exams/update.js.erb
+++ b/app/views/exams/update.js.erb
@@ -1,4 +1,4 @@
 $('#edit-exam-modal').modal('hide');
-$('table#exams-index tbody').html('<%= escape_javascript(render :partial => "exams/exams", :formats => [:html], :handlers => [:erb, :slim],  :as => :exam, :collection => @exams) %>');
+$('table#exams-index tbody').html('<%= render_js_partial("exam", {:exam => @exam}) %>');
 $('#exam-show').html('<%= escape_javascript(render :partial => "exams/exam_show", :formats => [:html], :handlers => [:erb, :slim],  :exam => @exam) %>');
 showNotice("<%= render_flash %>");
