--- a/app/views/admissions/_admission_form_fields.html.slim
+++ b/app/views/admissions/_admission_form_fields.html.slim
@@ -22,11 +22,11 @@
 .row-fluid
   .span3
     = form.label :surname, t("name")+" ("+t("surname")+")", :class => "control-label pull-left"
-    span.label.label-important.pull-right =t 'required'
+    = required_field
     = form.text_field :surname, :class => "validate[required] span12", "data-prompt-position" => "bottomRight:5"
   .span3
     = form.label :name, t("name")+" ("+t("given_name")+")", :class => "control-label pull-left"
-    span.label.label-important.pull-right =t 'required'
+    = required_field
     = form.text_field :name, :class => "validate[required] span12", "data-prompt-position" => "bottomRight:5"
   .span3
     = form.label :surname_reading, t("phonetic_reading") + " ("+t("surname")+")", :class => "control-label pull-left"
