--- a/app/views/shared/form_fields/_guardian_form_fields.html.slim
+++ b/app/views/shared/form_fields/_guardian_form_fields.html.slim
@@ -1,11 +1,11 @@
 .row-fluid
   .span3
     = guardian_form.label :surname, t("name")+" ("+t("surname")+")", :class => "control-label pull-left"
-    span.label.label-important.pull-right =t 'required'
+    = required_field
     = guardian_form.text_field :surname, :class => "validate[required] span12", "data-prompt-position" => "bottomRight:5", :value => @student.surname
   .span3
     = guardian_form.label :name, t("name")+" ("+t("given_name")+")", :class => "control-label pull-left"
-    span.label.label-important.pull-right =t 'required'
+    = required_field
     = guardian_form.text_field :name, :class => "validate[required] span12", "data-prompt-position" => "bottomRight:5"
   .span3
     = guardian_form.label :surname_reading, t("phonetic_reading") + " ("+t("surname")+")", :class => "control-label pull-left"
